--- a/css2.css
+++ b/css2.css
@@ -3,7 +3,7 @@
    font: 16px/28px arial, sans-serif; 
    background-color: #eaeaea; 
    color: #333; 
-   background-image: url(45degreee_fabric.webp); 
+   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0wKmeak_O5yVpRgdsHLLlStqenBTG3t6vzg&usqp=CAU); 
    background-size: cover; 
    background-attachment: fixed; 
  } 
