--- a/css2.css
+++ b/css2.css
@@ -44,8 +44,8 @@
   
  .hero { 
    height: 380px; 
-   background-image: url(web-development.webp); 
-   background-size: cover; 
+   background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/1c/Sugar_Glider_%28Petaurus_breviceps%29.jpg); 
+   background-size: cover;
    background-position: 0 -75px; 
    outline-style: solid; 
    outline-color: salmon; 
