--- a/css2.css
+++ b/css2.css
@@ -3,7 +3,7 @@
    font: 16px/28px arial, sans-serif; 
    background-color: #eaeaea; 
    color: #333; 
-   background-image: url (https://upload.wikimedia.org/wikipedia/commons/1/1c/Sugar_Glider_%28Petaurus_breviceps%29.jpg); 
+   background-image: url (); 
    background-size: cover; 
    background-attachment: fixed; 
  } 
