--- a/css2.css
+++ b/css2.css
@@ -44,7 +44,7 @@
   
  .hero { 
    height: 380px; 
-   background-image: url (https://media.australian.museum/media/dd/images/Some_image.width-800.2aac2a7.jpg);
+   background-image: url ();
    padding: 15px;
  } 
   
