--- a/css2.css
+++ b/css2.css
@@ -69,7 +69,7 @@
  } 
   
  .tabeljenis { 
-   border: 1px solid black; 
+   border: 1px green; 
    border-collapse: collapse; 
    width: 780px; 
    height: 100px; 
@@ -88,7 +88,7 @@
  } 
   
  .footer { 
-   background-color: #333; 
+   background-color: #322; 
    text-align: center; 
  } 
   
